# meowith

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml  (+1 more)
auth_framework/: Cargo.toml
auth_framework/src/: credentials.rs  error.rs  lib.rs  token.rs
auth_framework/src/adapter/: method_container.rs  mod.rs  token.rs
auth_framework/src/adapter/impl/: basic_authenticator.rs  catid_authenticator.rs  mod.rs
commons/: Cargo.toml
commons/src/: access_token_service.rs  cache.rs  lib.rs  middleware_actions.rs  pathlib.rs  pause_handle.rs  ssl_acceptor.rs
commons/src/autoconfigure/: addr_header.rs  auth_conf.rs  general_conf.rs  mod.rs  ssl_conf.rs
commons/src/context/: controller_request_context.rs  microservice_request_context.rs  mod.rs  request_context.rs
commons/src/error/: io_error.rs  mdsftp_error.rs  mod.rs  protocol_error.rs  std_response.rs
commons/src/permission/: check.rs  mod.rs
commons/src/protocol/file_transfer/: channel.rs  connection.rs  data.rs  handler.rs  mod.rs  pool.rs
commons/src/protocol/file_transfer/error/: mod.rs
commons/src/protocol/file_transfer/net/: mod.rs  packet_reader.rs  packet_type.rs  packet_writer.rs  wire.rs
controller/: Cargo.toml  README.md
controller/src/: database_session.rs  ioutils.rs  lib.rs  main.rs  setup_procedure.rs  token_service.rs
controller/src/catche/: catche.rs  mod.rs
controller/src/config/: controller_config.rs  mod.rs
controller/src/discovery/: discovery_service.rs  mod.rs  routes.rs
controller/src/error/: certificate.rs  mod.rs  node.rs
controller/src/health/: health_service.rs  mod.rs  routes.rs
controller/src/mgpp/: mgpp.rs  mod.rs
controller/src/middleware/: mod.rs  node_internal.rs  node_internal_middleware.rs  user_middleware.rs
controller/src/public/: mod.rs  node_management_service.rs
controller/src/public/routes/: auth.rs  mod.rs  node_management.rs  user_management.rs
controller/src/public/services/: user_service.rs
controller/src/setup/: auth_routes.rs  auth_service.rs  mod.rs
controller/src/ssl/: generate_certificate.rs  mod.rs  ssl_acceptor_builder.rs
dashboard/: Cargo.toml
dashboard/src/: config.rs  dashboard_config.rs  init_procedure.rs  lib.rs  main.rs  mgpp.rs
dashboard/src/auth/: method_container.rs  mod.rs  token.rs  user_middleware.rs
dashboard/src/auth/impl/: basic_authenticator.rs
dashboard/src/caching/: catche.rs  db.rs  invalidator.rs  mgpp_handler.rs  mod.rs
dashboard/src/public/: mod.rs
dashboard/src/public/auth/: auth_routes.rs  auth_service.rs
dashboard/src/public/routes/: application.rs  bucket.rs  mod.rs  role.rs  token.rs  user.rs
dashboard/src/public/service/: application_service.rs  bucket_service.rs  mod.rs  role_service.rs  token_service.rs  user_service.rs
data/: .gitignore  Cargo.toml
data/src/: database_session.rs  lib.rs  main.rs  pathlib.rs
data/src/access/: app_access.rs  file_access.rs  microservice_node_access.rs  mod.rs  storage_node_access.rs  user_access.rs
data/src/dto/: config.rs  controller.rs  entity.rs  mod.rs
data/src/error/: mod.rs
data/src/model/: app_model.rs  file_model.rs  microservice_node_model.rs  mod.rs  permission_model.rs  storage_node_model.rs  user_model.rs
docs/: CatcheProtocol.md  Definitions.md  FileLockingAndReservation.md  FileOperations.md  FileTransferAuthorization.md  MDSFTPProtocol.md  MGPPProtocol.md  NodeConnectivity.md  NodeCreation.md  NodeSynposis.md
logging/: Cargo.toml
network/: Cargo.toml
node/: Cargo.toml  README.md
node/src/: init_procedure.rs  lib.rs  main.rs  mgpp.rs  test.rs
node/src/caching/: catche.rs  db.rs  invalidator.rs  mgpp_handler.rs  mod.rs  node_storage_map.rs
node/src/config/: error.rs  mod.rs  node_config.rs  size_parser.rs
node/src/file_transfer/: channel_handler.rs  connection_authenticator.rs  mod.rs  packet_handler.rs  tests.rs  transfer_manager.rs
node/src/io/: embedded_fragment_metadata_store.rs  error.rs  fragment_ledger.rs  fragment_metadata_store.rs  mod.rs  request_stream.rs
node/src/locking/: error.rs  file_lock_table.rs  file_read_guard.rs  file_write_guard.rs  mod.rs  tests.rs
node/src/peer/: mod.rs  peer_utils.rs
node/src/public/: mod.rs  response.rs
node/src/public/extractors/: entry_path.rs  mod.rs  rename_request.rs
node/src/public/middleware/: user_middleware.rs
node/src/public/routes/: entity_action.rs  entity_list.rs  file_action.rs  file_transfer.rs  mod.rs
node/src/public/service/: chunk_service.rs  directory_action_service.rs  durable_transfer_session_manager.rs  file_access.rs  file_access_service.rs  file_action_service.rs  file_io_service.rs  file_list_service.rs  migration_service.rs  mod.rs  reservation_service.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/catche/: catche_client.rs  catche_server.rs  connection.rs  error.rs  handler.rs  mod.rs  reader.rs  tests.rs  writer.rs
protocol/src/file_transfer/: authenticator.rs  channel.rs  channel_handle.rs  connection.rs  data.rs  handler.rs  mod.rs  pool.rs  server.rs  tests.rs
protocol/src/file_transfer/error/: mod.rs
protocol/src/file_transfer/net/: mod.rs  packet_reader.rs  packet_type.rs  packet_writer.rs  validate.rs  wire.rs
protocol/src/framework/: auth.rs  connection.rs  error.rs  mod.rs  parser.rs  reader.rs  server.rs  server_wire.rs  traits.rs  writer.rs
protocol/src/framework/packet/: parser.rs
protocol/src/mdsftp/: authenticator.rs  channel.rs  channel_handle.rs  connection.rs  data.rs  handler.rs  mod.rs  pool.rs  server.rs  tests.rs
protocol/src/mdsftp/net/: mod.rs  packet_reader.rs  packet_type.rs  packet_writer.rs  validate.rs  wire.rs
protocol/src/mgpp/: client.rs  error.rs  handler.rs  mod.rs  packet.rs  server.rs  server_handlers.rs  tests.rs
protocol_macro/: Cargo.toml
src/: lib.rs
tests/: Cargo.toml
tests/resources/: ca_cert.pem  ca_private_key.pem
tests/src/: concurrent_upload_test.rs  directory_test.rs  durable_file_transfer_test.rs  file_transfer_test.rs  lib.rs  move_test.rs  resiliency_test.rs  test_configs.rs  utils.rs
(+18 files in other folders)
