[package]
name = "auth_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
data = { path = "../data", version = "0.1.0" }
commons = { path = "../commons", version = "0.1.0" }
serde = "1.0.208"
uuid = "1.10.0"
actix-web = "4.9.0"
jsonwebtoken = "9.3.0"
serde_json = "1.0.127"
scylla = "0.14.0"
log = { version = "0.4.22", features = ["release_max_level_debug"] }
bcrypt = "0.16.0"
reqwest = "0.12.7"
chrono = "0.4.38"
