[package]
name = "commons"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10.64"
reqwest = { version = "0.12.5", features = ["__rustls", "json"] }
rustls = "0.23.12"
uuid = { version = "1.9.1", features = ["v4"] }
actix-web = "4.9.0"
data = { path = "../data", version = "0.1.0" }
regex = "1.10.5"
derive_more = { version="1.0.0", features = ["full"] }
log = { version = "0.4.22", features = ["release_max_level_debug"] }
tokio = "1.38.0"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
jsonwebtoken = "9.3.0"
strum = "0.26.3"
num_enum = "0.7.3"
bcrypt = "0.16.0"
async-trait = "0.1.87"
thiserror = "1.0.64"
sled = "0.34.7"
bincode = "2.0.1"
