[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
rcgen = "0.13.1"
actix-rt = "2.10.0"
actix-web = { version = "4.7.0", features = ["openssl"] }
derive_more = "0.99.17"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
openssl = "0.10.64"
actix-cors = "0.7.0"
rand_chacha = { version = "0.9.0-alpha.1", features = ["default"] }
lazy_static = "1.5.0"

# Data dependencies
data = {  path = "../data", version = "0.1.0" }
network = {  path = "../network", version = "0.1.0" }
reqwest = { version = "0.12.5", features = ["__rustls"] }



charybdis = "0.7.0"
scylla = "0.13.0"
strum = { version = "0.26.2", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
futures-util = "0.3.30"
tokio = "1.38.0"
rand = "0.8.5"
