[package]
name = "controller"
version = "0.1.0"
edition = "2021"


[lib]
name = "controller_lib"
path = "src/lib.rs"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
rcgen = "0.13.1"
actix-rt = "2.10.0"
actix-web = { version = "4.7.0", features = ["openssl"] }
derive_more = { version="1.0.0", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
openssl = "0.10.64"
actix-cors = "0.7.0"
rand_chacha = { version = "0.9.0-alpha.1", features = ["default"] }
lazy_static = "1.5.0"
bcrypt = "0.15.1"

# Data dependencies
data = { path = "../data", version = "0.1.0" }
commons = { path = "../commons", version = "0.1.0" }
protocol = { path = "../protocol", version = "0.1.0" }
reqwest = { version = "0.12.5", features = ["__rustls"] }
auth_framework = { path="../auth_framework", version = "0.1.0" }

tokio-rustls = "0.26.0"
charybdis = "0.7.0"
scylla = "0.13.0"
strum = { version = "0.26.2", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
futures-util = "0.3.30"
tokio = "1.38.0"
rand = "0.8.5"
log = "0.4.22"
logging = { path = "../logging", version = "0.1.0" }
async-trait = "0.1.81"
jsonwebtoken = "9.3.0"
serde_json = "1.0.125"
tokio-util = "0.7.11"
