[package]
name = "controller"
version = "0.1.0"
edition = "2021"


[lib]
name = "controller_lib"
path = "src/lib.rs"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
actix-rt = "2.10.0"
actix-web = { version = "4.9.0", features = ["openssl"] }
derive_more = { version="1.0.0", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
openssl = "0.10.64"
actix-cors = "0.7.0"
lazy_static = "1.5.0"
bcrypt = "0.16.0"

# Data dependencies
data = { path = "../data", version = "0.1.0" }
commons = { path = "../commons", version = "0.1.0" }
protocol = { path = "../protocol", version = "0.1.0" }
reqwest = { version = "0.12.5", features = ["__rustls"] }
auth_framework = { path="../auth_framework", version = "0.1.0" }

tokio-rustls = "0.26.0"
scylla = "0.15.1"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
futures-util = "0.3.30"
tokio = "1.38.0"
rand = "0.8.5"
log = { version = "0.4.22", features = ["release_max_level_debug"] }
logging = { path = "../logging", version = "0.1.0" }
async-trait = "0.1.81"
tokio-util = "0.7.11"
