[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"


[lib]
name = "dashboard_lib"
path = "src/lib.rs"

[[bin]]
name = "dashboard"
path = "src/main.rs"


[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
logging = { path = "../logging", version = "0.1.0" }
commons = { path = "../commons", version = "0.1.0" }
auth_framework = { path = "../auth_framework", version = "0.1.0" }
futures = "0.3.30"
data = { path = "../data", version = "0.1.0" }
protocol = { path = "../protocol", version = "0.1.0" }
reqwest = "0.12.7"
openssl = "0.10.66"
scylla = "0.13.2"
actix-web = "4.9.0"
actix-cors = "0.7.0"
uuid = { version = "1.10.0", features = ["v4"] }
tokio = "1.39.3"
log = "0.4.22"
async-trait = "0.1.81"
serde_cbor = "0.11.2"
cached = "0.53.1"
chrono = "0.4.38"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
serde_json = "1.0.125"
lazy_static = "1.5.0"
num_enum = "0.7.3"
futures-util = "0.3.30"