[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
charybdis = "0.7.0"
scylla = "0.13.0"
strum = { version = "0.26.2", features = ["derive"] }
uuid = "1.8.0"
serde = { version = "1.0.203", features = ["derive"] }
actix-web = { version = "4.7.0" }
futures = { version = "0.3.30", features = [] }
derive_more = "0.99.18"
chrono = "0.4.38"
num_enum = "0.7.3"
regex = "1.10.5"
lazy_static = "1.5.0"
async-stream = "0.3.5"
log = "0.4.22"
