[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
actix-web = "4.7.0"
openssl = "0.10.64"

logging = { path = "../logging", version = "0.1.0" }
commons = { path = "../commons", version = "0.1.0"}
data = { path = "../data", version = "0.1.0" }
protocol = { path = "../protocol", version = "0.1.0" }
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["fs"] }
uuid = { version = "1.9.1", features = ["v4"] }
tokio-rustls = "0.26.0"
async-trait = "0.1.80"
actix-cors = "0.7.0"
log = "0.4.22"
derive_more = "0.99.18"
filesize = "0.2.0"
heim = { version = "0.0.11", features = ["disk"], default-features = false }
rand = "0.8.5"
actix-multipart = "0.7.2"
tokio-util = "0.7.11"

[dev-dependencies]
ntest = "*"
