[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
commons = { path = "../commons", version = "0.1.0" }
protocol_macro = { path = "../protocol_macro" }
openssl = "0.10.64"
rand = "0.8.5"
uuid = { version = "1.9.1", features = ["v4"] }

logging = { path = "../logging", version = "0.1.0", features = ["test_logging"] }
derive_more = { version="1.0.0", features = ["full"] }
log = { version = "0.4.22", features = ["release_max_level_debug"] }
tokio = "1.38.0"
tokio-util = "0.7.13"
rustls = "0.23.10"
tokio-rustls = "0.26.0"
multimap = "0.10.0"
async-trait = "0.1.80"
num_enum = "0.7.2"
socket2 = "0.5.8"

[dev-dependencies]
ntest = "*"
