[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
controller = { path = "../controller", version = "0.1.0" }
node = { path = "../node", version = "0.1.0" }
commons = { path = "../commons", version = "0.1.0" }
data = { path = "../data", version = "0.1.0" }
logging = { path = "../logging", version = "0.1.0" }
tokio = "1.39.3"
lazy_static = "1.5.0"
charybdis-migrate = "0.7.5"
log = "0.4.22"
reqwest = "0.12.7"