[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
controller = { path = "../controller", version = "0.1.0" }
node = { path = "../node", version = "0.1.0" }
commons = { path = "../commons", version = "0.1.0" }
data = { path = "../data", version = "0.1.0" }
logging = { path = "../logging", version = "0.1.0" }
auth_framework = { path = "../auth_framework", version = "0.1.0" }
dashboard = { path = "../dashboard", version = "0.1.0" }
tokio = "1.39.3"
lazy_static = "1.5.0"
charybdis-migrate = "1.0.1"
log = { version = "0.4.22", features = ["release_max_level_debug"] }
reqwest = { version = "0.12.7", features = ["stream"] }
rand = "0.9.1"
uuid = { version = "1.10.0", features = ["v4"] }
tokio-util = "0.7.11"
async-trait = "0.1.81"
reqwest-middleware = { version = "0.4.0", features = ["json"] }
http = "1.1.0"
ntest = "0.9.3"
chrono = "0.4.40"
